# snowflake-reads-databricks-iceberg

./: .gitignore  README.md  pyproject.toml
app/: README.md  app.yaml  requirements.txt
app/.databricks/sync-snapshots/: 9b3194165c0d7eca.json
app/backend/: main.py
app/backend/static/: index.html
app/backend/static/assets/: index-BI0ZL8_-.js  index-BTn6psfg.js  index-CpFx6akQ.js  index-D1LCGK-r.css  index-D4OYRo6l.css  index-DiD6Cv-f.js
app/deploy/: create_app.json  create_genie_space.py  grant_app_sp.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  BenchmarkPanel.tsx  FederationPanel.tsx  GeniePanel.tsx  MetricsPanel.tsx  RbacPanel.tsx  RowsCompare.tsx
docs/: ARCHITECTURE.md
examples/: basic_usage.py
src/snowflake_databricks_iceberg/: __init__.py  catalog_client.py  catalog_integration.py  cli.py  external_volume.py  table_refresher.py
terraform/: README.md  main.tf  terraform.tfvars.example
tests/: __init__.py  test_catalog_client.py
