[project]
name = "snowflake-databricks-iceberg"
version = "0.1.0"
description = "Enable Snowflake to read Apache Iceberg tables from Databricks Unity Catalog"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "David O'Keeffe", email = "david.okeeffe@databricks.com" }
]
keywords = [
    "snowflake",
    "databricks",
    "iceberg",
    "unity-catalog",
    "data-lakehouse",
    "azure"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "databricks-sdk>=0.20.0",
    "databricks-sql-connector>=3.0.0",
    "snowflake-connector-python>=3.0.0",
    "pyiceberg>=0.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "azure-identity>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dgokeeffe/snowflake-reads-databricks-iceberg"
Documentation = "https://github.com/dgokeeffe/snowflake-reads-databricks-iceberg#readme"
Repository = "https://github.com/dgokeeffe/snowflake-reads-databricks-iceberg"
Issues = "https://github.com/dgokeeffe/snowflake-reads-databricks-iceberg/issues"

[project.scripts]
snowflake-databricks-iceberg = "snowflake_databricks_iceberg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake_databricks_iceberg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
